--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "async": "^1.5.2",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -19,13 +20,23 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "moment": "^2.11.1",
     "rc": "~0.5.0",
     "sails": "~0.11.4",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "^0.11.6",
+    "sails-test-helper": "^0.5.0",
+    "should": "^8.2.0",
+    "swig-email-templates": "^2.0.0",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "build-server": "tsc --project api",
+    "run-dev": "sails lift",
+    "run-test": "cd assets && npm run build-client && cd .. && NODE_ENV=test node app.js",
+    "run-prod": "cd assets && npm run build-client && cd .. && NODE_ENV=production node app.js"
   },
   "main": "app.js",
   "repository": {
