--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,4 +5,4 @@ rspec:
   script:
    - npm run build-all
    - npm run run-server-tests
-   - NODE_ENV=production forever -a -l /dev/null --uid "UnitPal" start app.js
+   - NODE_ENV=production forever -a -l /dev/null --uid "UnitPalProduction" start app.js
