--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 before_script:
- - forever stop UnitPalProduction || echo 'No process named UnitPalProduction found. Continuing with the rest of the build.'
+ - npm run forever-stop
  - npm run install-deps
 rspec:
   script:
    - npm run build-all
    - npm run run-server-tests
-   - NODE_ENV=production forever -a -l /dev/null --uid "UnitPalProduction" start app.js
+   - npm run forever-start
