--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,7 @@
     "tsc": "tsc -p src -w",
     "start": "lite-server --open=angular_app",
     "e2e": "./node_modules/protractor/bin/webdriver-manager update && ./node_modules/protractor/bin/protractor protractor.conf.js",
-	"build-client" : "./node_modules/gulp/bin/gulp.js pack"
+	"build-client" : "node_modules/gulp/bin/gulp.js pack"
   },
   "keywords": [
     "UnitPal"
