--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "debug": "node debug app.js",
     "start": "node app.js",
     "install-deps": "npm install && cd assets && npm install && cd ..",
-    "build-server": "./node_modules/typescript/bin/tsc --project api",
-    "build-client": "(./node_modules/typescript/bin/tsc --project assets/client || echo '') && (cd assets && npm run build-client && cd ..)",
+    "build-server": "node_modules/typescript/bin/tsc --project api",
+    "build-client": "(node_modules/typescript/bin/tsc --project assets/client || echo '') && (cd assets && npm run build-client && cd ..)",
     "build-all": "npm run build-server && npm run build-client",
     "run-server-tests": "npm run build-server && make test",
     "run-e2e-tests": "npm run run-server-tests && cd assets && npm run e2e && cd ..",
