updated gitlab config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ rspec:
   script:
    - npm run build-all
    - npm run run-server-tests
-   - (git remote add azure https://unitpalprod:UnPL3%242_2%40suT21@unitpalprod.scm.azurewebsites.net:443/UnitPalProd.git) || echo "Azure remote already added"
+   - (git remote add azure https://unitpalprod:UnPL3$2_2%40suT21@unitpalprod.scm.azurewebsites.net:443/UnitPalProd.git) || echo "Azure remote already added"
    - git push azure master
    - npm run forever-start
    - echo "Finished the build for the Production Branch"
