removed Makefile for server tests

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build-server": "tsc --project api",
     "build-client": "(tsc --project assets/client || echo '') && (cd assets && npm run build-client && cd ..)",
     "build-all": "npm run build-server && npm run build-client",
-    "run-server-tests": "npm run build-server && make test",
+    "run-server-tests": "npm run build-server && NODE_ENV=test PORT=9999 ./node_modules/sails-test-helper/node_modules/.bin/mocha --recursive -t 30000 -R spec api/test/unit/",
     "run-e2e-tests": "npm run run-server-tests && cd assets && npm run e2e && cd ..",
     "run-dev": "sails lift",
     "run-test": "npm run build-client && NODE_ENV=test node app.js",
