updated package.json scripts

--- a/assets/package.json
+++ b/assets/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc -p src -w",
-    "start": "lite-server --open=angular_app",
-    "e2e": "tsc --project client/test/e2e && ./node_modules/protractor/bin/webdriver-manager update && ./node_modules/protractor/bin/protractor protractor.conf.js",
+    "start": "lite-server --open=.",
+    "e2e": "tsc --project client/test/e2e && node ./node_modules/protractor/bin/webdriver-manager update && node ./node_modules/protractor/bin/protractor protractor.conf.js",
     "build-client": "gulp pack"
   },
   "keywords": [
