--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,6 @@ before_script:
 rspec:
   script:
    - npm run build-all
-   - npm run run-server-tests
+   - npm run server-tests
    - npm run forever-start
    - echo "Finished the build for the Development Branch"
