--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gulp": "^3.9.0",
     "gulp-env": "^0.4.0",
     "gulp-install": "^0.6.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-shell": "^0.5.2"
   }
 }
