Integrated VAT Provider with tests
Summary: Integrated VAT Provider

Test Plan: ...

Reviewers: catalin.dobre

Subscribers: dragos.pricope

Differential Revision: https://phabricator.3angletech.com/D11

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,6 +25,16 @@
 			"type": "node",
 			"request": "attach",
 			"port": 5858
-		}
+		},
+        {
+            "name": "Run server tests",
+            "type": "node",
+            "program": "./node_modules/sails-test-helper/node_modules/mocha/bin/_mocha",
+            "stopOnEntry": false,
+            "args": ["api/test/unit/**/*.js", "--timeout", "10000"],
+            "cwd": ".",
+            "runtimeExecutable": null,
+            "env": { "NODE_ENV": "test"}
+        }
 	]
 }
