--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sails-mongo": "^0.11.6",
     "sails-test-helper": "^0.5.0",
     "should": "^8.2.0",
+    "soap": "^0.12.0",
     "swig-email-templates": "^2.0.0",
     "typescript": "^1.8.0-dev.20160120",
     "underscore": "^1.8.3"
