--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "async": "^1.5.2",
     "ejs": "~0.8.4",
+    "emailjs": "^1.0.2",
+    "extend": "^3.0.0",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
