--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,7 @@
             "type": "node",
             "program": "./node_modules/sails-test-helper/node_modules/mocha/bin/_mocha",
             "stopOnEntry": false,
-            "args": ["api/test/root/**/*.js", "--timeout", "10000"],
+            "args": ["api/test/root/**/*.js", "--timeout", "1000000"],
             "cwd": ".",
             "runtimeExecutable": null,
             "env": { "NODE_ENV": "test"}
