--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "soap": "^0.12.0",
     "swig-email-templates": "^2.0.0",
     "typescript": "^1.8.0-dev.20160120",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "winston": "^2.1.1",
+    "winston-mongodb": "^1.3.0"
   },
   "scripts": {
     "debug": "node debug app.js",
