--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "^1.5.2",
+    "bcrypt": "^0.8.5",
     "ejs": "~0.8.4",
     "emailjs": "^1.0.2",
     "extend": "^3.0.0",
@@ -23,6 +24,9 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "moment": "^2.11.1",
+    "node-uuid": "^1.4.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "rc": "~0.5.0",
     "sails": "~0.11.4",
     "sails-disk": "~0.10.0",
@@ -33,6 +37,7 @@
     "swig-email-templates": "^2.0.0",
     "typescript": "^1.8.0-dev.20160120",
     "underscore": "^1.8.3",
+    "util": "^0.10.3",
     "winston": "^2.1.1",
     "winston-mongodb": "^1.3.0"
   },
