--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "^1.5.2",
+    "cloudinary": "^1.3.0",
     "ejs": "~0.8.4",
     "emailjs": "^1.0.2",
     "extend": "^3.0.0",
@@ -28,6 +29,7 @@
     "sails-disk": "~0.10.0",
     "sails-mongo": "^0.11.6",
     "sails-test-helper": "^0.5.0",
+    "sendgrid": "^2.0.0",
     "should": "^8.2.0",
     "soap": "^0.12.0",
     "swig-email-templates": "^2.0.0",
