--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "moment": "^2.11.1",
+    "moment-timezone": "^0.5.0",
     "mongodb": "^2.1.7",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
