--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "debug": "node debug app.js",
     "start": "node app.js",
     "install-deps": "npm install && gulp install-client-deps",
-    "build-server": "tsc --project api",
-    "build-client": "(tsc --project assets/client || echo '') && (cd assets && npm run build-client && cd ..)",
+    "build-server": "gulp clean-server && tsc --project api",
+    "build-client": "gulp clean-client && (tsc --project assets/client || echo '') && (cd assets && npm run build-client && cd ..)",
     "build-all": "npm run build-server && npm run build-client",
     "server-tests": "npm run build-server && gulp run-server-tests",
     "e2e-tests": "npm run server-tests && cd assets && npm run e2e && cd ..",
@@ -69,6 +69,7 @@
   "license": "",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
     "gulp-env": "^0.4.0",
     "gulp-install": "^0.6.0",
     "gulp-mocha": "^2.2.0",
