--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "gulp-env": "^0.4.0",
     "gulp-install": "^0.6.0",
     "gulp-mocha": "^2.2.0",
-    "gulp-shell": "^0.5.2"
+    "gulp-shell": "^0.5.2",
+    "istanbul": "^0.4.2"
   }
 }
