--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "gulp-clean": "^0.3.1",
     "gulp-env": "^0.4.0",
     "gulp-install": "^0.6.0",
+    "gulp-istanbul": "^0.10.3",
     "gulp-mocha": "^2.2.0",
     "gulp-shell": "^0.5.2",
     "istanbul": "^0.4.2"
