--- a/assets/package.json
+++ b/assets/package.json
@@ -1,40 +1,41 @@
 {
-	"name": "unitpal",
-	"version": "1.0.0",
-	"description": "UnitPal Hotel Manager",
-	"main": "index.js",
-	"scripts": {
-		"tsc": "tsc -p src -w",
-		"start": "lite-server --open=.",
-		"e2e": "tsc --project client/test/e2e && node ./node_modules/protractor/bin/webdriver-manager update && node ./node_modules/protractor/bin/protractor protractor.conf.js",
-		"build-client": "gulp pack"
-	},
-	"keywords": [
-		"UnitPal"
-	],
-	"author": "3angleTECH",
-	"license": "ISC",
-	"dependencies": {
-		"angular2": "2.0.0-beta.9",
-		"systemjs": "0.19.6",
-		"es6-promise": "^3.0.2",
-		"es6-shim": "^0.33.3",
-		"reflect-metadata": "0.1.2",
-		"rxjs": "5.0.0-beta.2",
-		"zone.js": "0.5.15",
-		"underscore": "^1.8.3"
-	},
-	"devDependencies": {
-		"concurrently": "^1.0.0",
-		"gulp": "^3.9.0",
-		"gulp-angular-embed-templates": "^1.1.0",
-		"gulp-clean": "^0.3.1",
-		"gulp-minify": "0.0.5",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-typescript": "^2.10.0",
-		"lite-server": "^1.3.1",
-		"phantomjs": "^1.9.19",
-		"protractor": "^3.0.0",
-		"typescript": "^1.8.0-dev.20160120"
-	}
+  "name": "unitpal",
+  "version": "1.0.0",
+  "description": "UnitPal Hotel Manager",
+  "main": "index.js",
+  "scripts": {
+    "tsc": "tsc -p src -w",
+    "start": "lite-server --open=.",
+    "e2e": "tsc --project client/test/e2e && node ./node_modules/protractor/bin/webdriver-manager update && node ./node_modules/protractor/bin/protractor protractor.conf.js",
+    "build-client": "gulp pack"
+  },
+  "keywords": [
+    "UnitPal"
+  ],
+  "author": "3angleTECH",
+  "license": "ISC",
+  "dependencies": {
+    "angular2": "^2.0.0-beta.9",
+    "es6-promise": "^3.1.2",
+    "es6-shim": "^0.33.13",
+    "moment": "^2.12.0",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "^5.0.0-beta.2",
+    "systemjs": "0.19.6",
+    "underscore": "^1.8.3",
+    "zone.js": "^0.5.15"
+  },
+  "devDependencies": {
+    "concurrently": "^1.0.0",
+    "gulp": "^3.9.0",
+    "gulp-angular-embed-templates": "^1.1.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-minify": "0.0.5",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.10.0",
+    "lite-server": "^1.3.1",
+    "phantomjs": "^1.9.19",
+    "protractor": "^3.0.0",
+    "typescript": "^1.8.0-dev.20160120"
+  }
 }
