--- a/assets/package.json
+++ b/assets/package.json
@@ -15,7 +15,7 @@
   "author": "3angleTECH",
   "license": "ISC",
   "dependencies": {
-    "angular2": "^2.0.0-beta.9",
+    "angular2": "^2.0.0-beta.10",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.33.13",
     "moment": "^2.12.0",
@@ -23,7 +23,7 @@
     "rxjs": "^5.0.0-beta.2",
     "systemjs": "0.19.6",
     "underscore": "^1.8.3",
-    "zone.js": "^0.5.15"
+    "zone.js": "^0.6.4"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
@@ -36,6 +36,6 @@
     "lite-server": "^1.3.1",
     "phantomjs": "^1.9.19",
     "protractor": "^3.0.0",
-    "typescript": "^1.8.0-dev.20160120"
+    "typescript": "^1.8.9"
   }
 }
