--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "should": "^8.2.0",
     "soap": "^0.12.0",
     "swig-email-templates": "^2.0.0",
-    "typescript": "^1.8.0-dev.20160120",
+    "typescript": "^1.8.9",
     "underscore": "^1.8.3",
     "util": "^0.10.3",
     "winston": "^2.1.1",
