--- a/assets/package.json
+++ b/assets/package.json
@@ -19,7 +19,7 @@
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.33.13",
     "moment": "^2.12.0",
-    "reflect-metadata": "^0.1.2",
+    "reflect-metadata": "0.1.2",
     "rxjs": "^5.0.0-beta.2",
     "systemjs": "0.19.6",
     "underscore": "^1.8.3",
