--- a/assets/package.json
+++ b/assets/package.json
@@ -16,12 +16,19 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "^2.0.0-beta.11",
+    "animate.css": "^3.5.1",
+    "bootstrap": "^3.3.6",
+    "bootstrap-daterangepicker": "^2.1.19",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
+    "font-awesome": "^4.5.0",
+    "jquery.1": "^1.0.0",
     "moment": "^2.12.0",
+    "pace-progress": "^1.0.2",
     "reflect-metadata": "0.1.2",
     "rxjs": "^5.0.0-beta.2",
     "systemjs": "0.19.6",
+    "toastr": "^2.1.2",
     "underscore": "^1.8.3",
     "zone.js": "^0.6.4"
   },
