--- a/assets/package.json
+++ b/assets/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.6",
     "bootstrap-daterangepicker": "^2.1.19",
     "es6-shim": "^0.35.0",
+    "floatthead": "^1.4.0",
     "font-awesome": "^4.5.0",
     "jquery.1": "^1.0.0",
     "moment": "^2.12.0",
