--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "^1.5.2",
-    "bcrypt": "^0.8.5",
+    "bcrypt-nodejs": "0.0.3",
     "cloudinary": "^1.3.0",
     "ejs": "2.3.4",
     "emailjs": "^1.0.2",
