--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 before_script:
- - npm run forever-stop
- - npm run install-deps
+#  - npm run forever-stop
+#  - npm run install-deps
 rspec:
   script:
-   - npm run build-all
-   - npm run server-tests
+  #  - npm run build-all
+  #  - npm run server-tests
    - ./azure_install.sh
-   - npm run forever-start
+  #  - npm run forever-start
    - echo "Finished the build for the Production Branch"
