--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.0.0",
   "description": "a Sails application",
   "keywords": [],
+  "engines" : { 
+    "node" : "4.4.2",
+    "npm" : "2.14.12" 
+  },
   "dependencies": {
     "async": "^1.5.2",
     "bcrypt-nodejs": "0.0.3",
