--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
     "async": "^1.5.2",
     "bcrypt-nodejs": "0.0.3",
     "cloudinary": "^1.3.0",
-    "ejs": "2.3.4",
+    "ejs": "~0.8.4",
     "emailjs": "^1.0.2",
     "extend": "^3.0.0",
-    "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-coffee": "0.13.0",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-copy": "0.5.0",
-    "grunt-contrib-cssmin": "0.9.0",
-    "grunt-contrib-jst": "0.6.0",
-    "grunt-contrib-less": "1.1.0",
-    "grunt-contrib-uglify": "0.7.0",
-    "grunt-contrib-watch": "0.5.3",
-    "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.2.4",
-    "include-all": "~0.1.6",
+    "grunt": "0.4.2",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-jst": "~0.6.0",
+    "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "^0.6.0",
+    "grunt-sails-linker": "~0.9.5",
+    "grunt-sync": "~0.0.4",
+    "include-all": "~0.1.3",
     "moment": "^2.11.1",
     "moment-timezone": "^0.5.0",
     "mongodb": "^2.1.7",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "rc": "1.0.1",
-    "sails": "~0.12.2",
-    "sails-disk": "~0.10.9",
-    "sails-mongo": "^0.11.6",
+    "rc": "~0.5.0",
+    "sails": "~0.11.4",
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "~0.11.4",
     "sails-test-helper": "^0.5.0",
     "sendgrid": "^2.0.0",
     "should": "^8.2.0",
