--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 // Place your settings in this file to overwrite default and user settings.
 {
 	"files.exclude": {
-		"assets/client/src/**/*.js": { "when": "$(basename).ts"}
+		"assets/client/src/**/*.js": { "when": "$(basename).ts"},
+		"api/**/*.js": { "when": "$(basename).ts"}
 	}
 }
