--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "^1.5.2",
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "0.8.6",
     "cloudinary": "^1.3.1",
     "ejs": "2.4.1",
     "emailjs": "^1.0.4",
