--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "async": "^1.5.2",
-    "bcrypt": "0.8.6",
+    "bcrypt-nodejs": "0.0.3",
     "cloudinary": "^1.3.1",
     "ejs": "2.4.1",
     "emailjs": "^1.0.4",
