--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "^1.5.2",
-    "bcrypt": "0.8.6",
+    "bcrypt-nodejs": "0.0.3",
     "cloudinary": "^1.3.1",
     "ejs": "2.4.1",
     "emailjs": "^1.0.4",
@@ -37,7 +37,7 @@
     "sails-test-helper": "^0.5.0",
     "sendgrid": "^2.0.0",
     "should": "^8.3.1",
-    "soap": "^0.14.0",
+    "soap": "^0.12.0",
     "swig-email-templates": "^2.1.0",
     "typescript": "^1.8.10",
     "underscore": "^1.8.3",
