[T191] Integrated node-scheduler

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.13.0",
     "moment-timezone": "^0.5.3",
     "mongodb": "^2.1.18",
+    "node-schedule": "^1.1.0",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
