--- a/assets/package.json
+++ b/assets/package.json
@@ -35,6 +35,7 @@
     "perfect-scrollbar": "^0.6.11",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
+    "select2": "^4.0.2",
     "systemjs": "0.19.6",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
