--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sails-mongo": "^0.12.0",
     "sails-test-helper": "^0.5.0",
     "sendgrid": "^2.0.0",
+    "shortid": "^2.2.6",
     "should": "^8.3.1",
     "soap": "^0.12.0",
     "swig-email-templates": "^2.1.0",
