--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport.socketio": "3.6.1",
     "phantom": "2.1.2",
     "phantomjs": "2.1.7",
     "rc": "1.1.6",
@@ -41,6 +42,7 @@
     "sendgrid": "^2.0.0",
     "should": "^8.3.1",
     "soap": "^0.12.0",
+    "socket.io": "1.4.6",
     "swig-email-templates": "^2.1.0",
     "typescript": "^1.8.10",
     "underscore": "^1.8.3",
