updated db access config files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,6 @@ before_script:
 rspec:
   script:
    - npm run build-all
-   - npm run server-tests
-   - npm run forever-start
+   - MONGO_USER=demothangle MONGO_PASSWD=Anisdy\$57m! npm run server-tests
+   - MONGO_USER=demothangle MONGO_PASSWD=Anisdy\$57m! npm run forever-start
    - echo "Finished the build for the Development Branch"
