--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.0",
     "sails-test-helper": "^0.5.0",
-    "sendgrid": "^2.0.0",
+    "sendgrid": "3.0.5",
     "shortid": "^2.2.6",
     "should": "^8.3.1",
     "slack-node": "^0.2.0",
