--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.13.0",
     "moment-timezone": "^0.5.4",
-    "mongodb": "^2.1.18",
+    "mongodb": "2.1.18",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
