--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "async": "^1.5.2",
+    "async": "1.5.2",
     "bcrypt-nodejs": "0.0.3",
-    "cloudinary": "^1.3.1",
-    "cron": "^1.1.0",
+    "cloudinary": "1.4.1",
+    "cron": "1.1.0",
     "ejs": "2.4.1",
-    "emailjs": "^1.0.4",
-    "extend": "^3.0.0",
+    "emailjs": "1.0.5",
+    "extend": "3.0.0",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-coffee": "0.13.0",
@@ -22,36 +22,36 @@
     "grunt-contrib-less": "1.1.0",
     "grunt-contrib-uglify": "0.7.0",
     "grunt-contrib-watch": "0.5.3",
-    "grunt-sails-linker": "~0.10.1",
+    "grunt-sails-linker": "0.10.1",
     "grunt-sync": "0.2.4",
-    "include-all": "~0.1.6",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.13.0",
-    "moment-timezone": "^0.5.4",
+    "include-all": "0.1.6",
+    "mkdirp": "0.5.1",
+    "moment": "2.14.1",
+    "moment-timezone": "0.5.4",
     "mongodb": "2.1.18",
-    "node-uuid": "^1.4.7",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
+    "node-uuid": "1.4.7",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
     "passport.socketio": "3.6.1",
     "phantom": "2.1.2",
     "phantomjs": "2.1.7",
     "rc": "1.1.6",
-    "sails": "~0.12.3",
-    "sails-disk": "~0.10.9",
-    "sails-mongo": "^0.12.0",
-    "sails-test-helper": "^0.5.0",
+    "sails": "0.12.3",
+    "sails-disk": "0.10.10",
+    "sails-mongo": "0.12.0",
+    "sails-test-helper": "0.5.0",
     "sendgrid": "3.0.5",
-    "shortid": "^2.2.6",
-    "should": "^8.3.1",
-    "slack-node": "^0.2.0",
-    "soap": "^0.12.0",
+    "shortid": "2.2.6",
+    "should": "8.4.0",
+    "slack-node": "0.2.0",
+    "soap": "0.12.0",
     "socket.io": "1.4.6",
-    "swig-email-templates": "^2.1.0",
-    "typescript": "^1.8.10",
-    "underscore": "^1.8.3",
-    "util": "^0.10.3",
-    "winston": "^2.2.0",
-    "winston-mongodb": "^1.4.0"
+    "swig-email-templates": "2.1.0",
+    "typescript": "1.8.10",
+    "underscore": "1.8.3",
+    "util": "0.10.3",
+    "winston": "2.2.0",
+    "winston-mongodb": "1.6.0"
   },
   "scripts": {
     "debug": "node debug app.js",
