modified package.json in order to exit npm run buil-all with an error  if a compilation error occurs on the client

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "start": "node app.js",
     "install-deps": "npm install && gulp install-client-deps",
     "build-server": "gulp clean-server && tsc --project api",
-    "build-client": "gulp clean-client && (tsc --project assets/client || echo '') && (cd assets && npm run build-client && cd ..)",
+    "build-client": "gulp clean-client && (tsc --project assets/client) && (cd assets && npm run build-client && cd ..)",
     "build-all": "npm run build-server && npm run build-client",
     "server-tests": "npm run build-server && gulp run-server-tests",
     "e2e-tests": "npm run server-tests && cd assets && npm run e2e && cd ..",
