--- a/assets/package.json
+++ b/assets/package.json
@@ -38,7 +38,8 @@
     "rxjs": "5.0.0-beta.6",
     "select2": "^4.0.2",
     "socket.io": "1.4.6",
-    "systemjs": "0.19.6",
+    "core-js": "^2.4.0",
+    "systemjs": "0.19.27",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
     "zone.js": "^0.6.12"
