--- a/assets/package.json
+++ b/assets/package.json
@@ -15,15 +15,15 @@
   "author": "3angleTECH",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular/upgrade": "2.0.0-rc.5",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.6",
     "animate.css": "^3.5.1",
     "bootstrap": "^3.3.6",
     "bootstrap-daterangepicker": "^2.1.19",
@@ -35,17 +35,17 @@
     "pace-progress": "^1.0.2",
     "perfect-scrollbar": "^0.6.11",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.11",
     "select2": "^4.0.2",
     "socket.io": "1.4.6",
-    "core-js": "^2.4.0",
+    "core-js": "^2.4.1",
     "systemjs": "0.19.27",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.6.17"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
+    "concurrently": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-angular-embed-templates": "^2.2.0",
     "gulp-clean": "^0.3.2",
