--- a/assets/package.json
+++ b/assets/package.json
@@ -15,15 +15,15 @@
   "author": "3angleTECH",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.1",
-    "@angular/compiler": "2.0.1",
-    "@angular/core": "2.0.1",
-    "@angular/forms": "2.0.1",
-    "@angular/http": "2.0.1",
-    "@angular/platform-browser": "2.0.1",
-    "@angular/platform-browser-dynamic": "2.0.1",
-    "@angular/router": "3.0.1",
-    "@angular/upgrade": "2.0.1",
+    "@angular/common": "~2.0.2",
+    "@angular/compiler": "~2.0.2",
+    "@angular/core": "~2.0.2",
+    "@angular/forms": "~2.0.2",
+    "@angular/http": "~2.0.2",
+    "@angular/platform-browser": "~2.0.2",
+    "@angular/platform-browser-dynamic": "~2.0.2",
+    "@angular/router": "~3.0.2",
+    "@angular/upgrade": "~2.0.2",
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
     "bootstrap-daterangepicker": "^2.1.24",
@@ -34,25 +34,25 @@
     "moment": "^2.15.1",
     "pace-progress": "^1.0.2",
     "perfect-scrollbar": "^0.6.12",
-    "reflect-metadata": "0.1.3",
+    "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "select2": "^4.0.2",
     "socket.io": "1.4.6",
     "core-js": "^2.4.1",
-    "systemjs": "0.19.27",
+    "systemjs": "0.19.39",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "concurrently": "^2.2.0",
+    "concurrently": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-angular-embed-templates": "^2.2.0",
     "gulp-clean": "^0.3.2",
     "gulp-minify": "0.0.11",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.0",
-    "lite-server": "^2.2.0",
+    "lite-server": "^2.2.2",
     "phantomjs": "^2.1.7",
     "systemjs-builder": "^0.15.15",
     "protractor": "^3.3.0",
