#95 Refactored the report generation on the backend (removed data layer, simplified the generation steps)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
 		"assets/client/src/**/*.js": { "when": "$(basename).ts"},
 		"api/**/*.js": { "when": "$(basename).ts"}
 	},
-	"workbench.editor.showTabs": false
+    "workbench.editor.showTabs": false,
+    "typescript.tsdk": "./node_modules/typescript/lib"
 }
