--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,7 @@
         {
             "name": "Server tests",
             "type": "node",
+			"request": "launch",
             "program": "${workspaceRoot}/node_modules/sails-test-helper/node_modules/mocha/bin/_mocha",
             "stopOnEntry": false,
             "args": ["api/test/root/**/*.js", "--timeout", "1000000"],
