--- a/assets/package.json
+++ b/assets/package.json
@@ -19,15 +19,15 @@
   "author": "3angleTECH",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/http": "~2.4.0",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
-    "@angular/router": "~3.4.0",
-    "@angular/upgrade": "~2.4.0",
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/http": "~4.0.0",
+    "@angular/platform-browser": "~4.0.0",
+    "@angular/platform-browser-dynamic": "~4.0.0",
+    "@angular/router": "~4.0.0",
+    "@angular/upgrade": "~4.0.0",
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
     "bootstrap-daterangepicker": "^2.1.24",
@@ -46,7 +46,7 @@
     "systemjs": "0.19.40",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
-    "zone.js": "^0.7.4"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "concurrently": "^3.1.0",
@@ -60,6 +60,6 @@
     "phantomjs": "^2.1.7",
     "systemjs-builder": "^0.15.15",
     "protractor": "^3.3.0",
-    "typescript": "2.1.5"
+    "typescript": "~2.2.0"
   }
 }
