--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,14 @@
-before_script:
- - npm run forever-stop
- - npm run install-deps
-
 build_test_run:
   script:
+   - npm run forever-stop
+   - npm run install-deps
    - npm run build-all
-   - MONGO_USER=demothangle MONGO_PASSWD=$MONGO_PASSWD npm run server-tests
-   - MONGO_USER=demothangle MONGO_PASSWD=$MONGO_PASSWD npm run forever-start
+   - MONGO_USER=demothangle MONGO_PASSWD=Anisdy\$57m! npm run server-tests
+   - MONGO_USER=demothangle MONGO_PASSWD=Anisdy\$57m! npm run forever-start
    - echo "Finished the build for the Production Branch"
-  
+
 deploy:
   script:
-   - ./ansible/azure_install.sh $UNITPAL_REPO_URL
+   - ./ansible/azure_install.sh
   only:
    - master
