#288 Added librato ansible role - should install and configure the librato agent

--- a/ansible/unitpal_full_deployment.yml
+++ b/ansible/unitpal_full_deployment.yml
@@ -8,3 +8,4 @@
     - unitpal
     - pm2
     - nginx
+    - { role: librato.librato, librato_email: {{ librato_email }}, librato_token: {{ librato_api_token }} }
