[HotFix] Froze the client's package.json versions

--- a/assets/package.json
+++ b/assets/package.json
@@ -28,38 +28,38 @@
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
     "@angular/upgrade": "~4.0.0",
-    "animate.css": "^3.5.2",
-    "bootstrap": "^3.3.7",
-    "bootstrap-daterangepicker": "^2.1.24",
-    "echarts": "^3.2.3",
-    "es6-shim": "^0.35.0",
-    "font-awesome": "^4.6.3",
-    "jquery.1": "^1.0.0",
-    "moment": "^2.15.1",
-    "pace-progress": "^1.0.2",
-    "perfect-scrollbar": "^0.6.12",
-    "reflect-metadata": "^0.1.8",
+    "animate.css": "3.5.2",
+    "bootstrap": "3.3.7",
+    "bootstrap-daterangepicker": "2.1.24",
+    "echarts": "3.2.3",
+    "es6-shim": "0.35.0",
+    "font-awesome": "4.6.3",
+    "jquery.1": "1.0.0",
+    "moment": "2.15.1",
+    "pace-progress": "1.0.2",
+    "perfect-scrollbar": "0.6.12",
+    "reflect-metadata": "0.1.8",
     "rxjs": "5.0.1",
-    "select2": "^4.0.2",
+    "select2": "4.0.2",
     "socket.io": "1.4.6",
-    "core-js": "^2.4.1",
+    "core-js": "2.4.1",
     "systemjs": "0.19.40",
-    "toastr": "^2.1.2",
-    "underscore": "^1.8.3",
-    "zone.js": "^0.8.4"
+    "toastr": "2.1.2",
+    "underscore": "1.8.3",
+    "zone.js": "0.8.5"
   },
   "devDependencies": {
-    "concurrently": "^3.1.0",
-    "gulp": "^3.9.0",
-    "gulp-angular-embed-templates": "^2.2.0",
-    "gulp-clean": "^0.3.2",
+    "concurrently": "3.1.0",
+    "gulp": "3.9.0",
+    "gulp-angular-embed-templates": "2.2.0",
+    "gulp-clean": "0.3.2",
     "gulp-minify": "0.0.11",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.0",
-    "lite-server": "^2.2.2",
-    "phantomjs": "^2.1.7",
-    "systemjs-builder": "^0.15.15",
-    "protractor": "^3.3.0",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-typescript": "2.13.0",
+    "lite-server": "2.2.2",
+    "phantomjs": "2.1.7",
+    "systemjs-builder": "0.15.15",
+    "protractor": "3.3.0",
     "typescript": "~2.2.0"
   }
 }
