[HotFix] Attached env info to the 'run on demo3AT' job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,3 +38,5 @@ run on demo3AT:
     - npm run install-deps
     - npm run build-all
     - MONGO_USER=demothangle MONGO_PASSWD=Anisdy\$57m! npm run forever-start
+  environment:
+    name: demo
