--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "description": "a Sails application",
   "keywords": [],
-  "engines" : { 
-    "node" : "4.4.1",
-    "npm" : "3.8.3" 
+  "engines": {
+    "node": "4.4.1",
+    "npm": "3.8.3"
   },
   "dependencies": {
     "async": "1.5.2",
@@ -34,6 +34,7 @@
     "moment-timezone": "0.5.4",
     "mongodb": "2.1.18",
     "node-uuid": "1.4.7",
+    "oauth2-server": "2.4.1",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "passport.socketio": "3.6.1",
@@ -91,4 +92,3 @@
     "istanbul": "^0.4.3"
   }
 }
-
