--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"declaration": false,
-		"target": "es5"
+		"target": "es5",
+		"lib": ["es2017", "dom"]
 	}
 }
