--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "socket.io": "1.4.6",
     "swig-email-templates": "2.1.0",
     "typescript": "2.3.4",
+    "typings": "2.1.1",
     "underscore": "1.8.3",
     "util": "0.10.3",
     "winston": "2.2.0",
