#450 Test allow_failure attribute

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ test on demo3AT:
     - npm run install-deps
     - npm run build-all
     - MONGO_USER=demothangle MONGO_PASSWD=Anisdy\$57m! npm run server-tests
+  allow_failure: false
+  when: manual
   environment:
     name: demo
 
