--- a/assets/package.json
+++ b/assets/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
     "@angular/upgrade": "~4.0.0",
+    "@types/socket.io-client": "1.4.29",
     "animate.css": "3.5.2",
     "bootstrap": "3.3.7",
     "bootstrap-daterangepicker": "2.1.24",
@@ -35,6 +36,8 @@
     "echarts": "3.2.3",
     "es6-shim": "0.35.0",
     "font-awesome": "4.6.3",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-replace": "^0.4.3",
     "jquery.1": "1.0.0",
     "moment": "2.15.1",
     "pace-progress": "1.0.2",
@@ -43,7 +46,6 @@
     "rxjs": "5.0.1",
     "select2": "4.0.2",
     "socket.io-client": "2.0.3",
-    "@types/socket.io-client": "1.4.29",
     "systemjs": "0.19.40",
     "toastr": "2.1.2",
     "underscore": "1.8.3",
@@ -62,6 +64,6 @@
     "systemjs-builder": "0.15.36",
     "protractor": "3.3.0",
     "typescript": "2.3.4",
-    "typings": "2.1.1"  
+    "typings": "2.1.1"
   }
 }
