--- a/assets/package.json
+++ b/assets/package.json
@@ -36,8 +36,6 @@
     "echarts": "3.2.3",
     "es6-shim": "0.35.0",
     "font-awesome": "4.6.3",
-    "gulp-rev": "^7.1.2",
-    "gulp-rev-replace": "^0.4.3",
     "jquery.1": "1.0.0",
     "moment": "2.15.1",
     "pace-progress": "1.0.2",
@@ -59,6 +57,8 @@
     "gulp-minify": "0.0.11",
     "gulp-sourcemaps": "1.12.0",
     "gulp-typescript": "2.14.1",
+    "gulp-rev": "7.1.2",
+    "gulp-rev-replace": "0.4.3",
     "lite-server": "2.3.0",
     "phantomjs": "2.1.7",
     "systemjs-builder": "0.15.36",
