--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "test": "npm run build-client && gulp run-test",
     "prod": "npm run build-client && gulp run-prod",
     "forever-stop": "forever stop UnitPalProduction || echo 'No process named UnitPalProduction found. Continuing with the rest of the build.'",
-    "forever-start": "NODE_ENV=production forever -a -l /dev/null --uid \"UnitPalProduction\" start app.js"
+    "forever-start": "NODE_ENV=production forever -a -l /dev/null --uid \"UnitPalProduction\" start app.js",
+    "rev-replace": "cd assets && nom run rev-replace && cd .."
   },
   "main": "app.js",
   "repository": {
