--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/async": "2.0.40",
     "@types/express": "4.0.36",
     "@types/mocha": "2.2.41",
+    "@types/oauth2-server": "3.0.0",
     "@types/should": "8.3.0",
     "@types/socket.io": "1.4.29",
     "@types/supertest": "2.0.2",
@@ -100,4 +101,3 @@
     "istanbul": "^0.4.3"
   }
 }
-
